--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <title>Frontend</title>
   <base href="/">
-  <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="favicon.ico" rel="icon" type="image/x-icon">
+  <meta name="viewwport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--<link href="hyyeps://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel=""-->
 </head>
 <body>
-<app-root></app-root>
+  <app-root></app-root>
 </body>
 </html>
